# roboy_ik

./: CMakeLists.txt  README.md  package.xml
launch/: motion_planning_api_tutorial.launch  move_group_interface_tutorial.launch  my_test.launch
src/: head.xml  motion.cpp  pose.txt  roboy_ik_client.cpp  roboy_ik_server.cpp  run.sh  traj_sub.cpp  trajo.xml
srv/: InverseKinematics.srv
